--- a/web/package.json
+++ b/web/package.json
@@ -2,10 +2,11 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "nodemon index.ts",
+    "dev": "next dev",
     "build": "next build",
-    "start": "ts-node index.ts",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,9 +18,9 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.523.0",
     "mongoose": "^8.16.1",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
@@ -34,6 +35,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "nodemon": "^3.1.10",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.4",
