--- a/web/package.json
+++ b/web/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-v0-project",
+  "name": "shopsculpt",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -38,18 +39,22 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.6.0",
+    "express": "^5.1.0",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
+    "mongoose": "^8.16.1",
     "next": "^15.3.4",
     "next-themes": "^0.4.4",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -60,11 +65,20 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8.5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.1",
+    "@types/react": "^18.2.50",
+    "@types/react-dom": "^18.2.18",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.4",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.7.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
