--- a/web/package.json
+++ b/web/package.json
@@ -52,6 +52,7 @@
     "mongoose": "^8.16.1",
     "next": "^15.3.4",
     "next-themes": "^0.4.4",
+    "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
