--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -23,6 +23,14 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/dbConnect.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "lib/dbConnect.js",
+    "app/api/seed/generateDummyReviews.ts",
+    "app/api/seed/generateDummyReview.js"
+  ],
   "exclude": ["node_modules"]
 }
