--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node --loader ts-node/esm scripts/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -72,7 +73,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.1",
+    "@types/node": "^20.19.6",
     "@types/react": "^18.2.50",
     "@types/react-dom": "^18.2.18",
     "eslint": "^9",
